--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - MONGODB_URI=mongodb://mongodb:27017/monterrey_crm
+      - MONGODB_URI=mongodb://${DB_USER}:${DB_PASSWORD}@mongodb:27017/monterrey_crm?authSource=admin
       - TZ=America/Santo_Domingo
     depends_on:
       - mongodb
@@ -23,6 +23,8 @@ services:
       - mongodb_data:/data/db
     environment:
       - MONGO_INITDB_DATABASE=monterrey_crm
+      - MONGO_INITDB_ROOT_USERNAME=${DB_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${DB_PASSWORD}
 
 volumes:
   mongodb_data:
