--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,8 @@ services:
     restart: always
     ports:
       - "3000:3000"
+    volumes:
+      - uploads_data:/app/public/uploads
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://${DB_USER}:${DB_PASSWORD}@mongodb:27017/monterrey_crm?authSource=admin
@@ -28,3 +30,4 @@ services:
 
 volumes:
   mongodb_data:
+  uploads_data:
