--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/bcryptjs": "^3.0.0",
+    "@types/mime": "^4.0.0",
     "@types/uuid": "^11.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "date-fns": "^4.1.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.309.0",
+    "mime": "^4.1.0",
     "mongoose": "^8.20.1",
     "next": "^14.2.33",
     "next-themes": "^0.4.6",
